--- a/api/docker-compose.yaml
+++ b/api/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
       - '5432:5432'
     environment:
       POSTGRES_DB: ${DB_NAME}
-      POSTGRES_USER: ${DB_USER}
+      POSTGRES_USER: ${DB_USERNAME}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
     container_name: TailorShopDB
     volumes:
