Update: env template file

--- a/api/.env-template
+++ b/api/.env-template
@@ -1,3 +1,5 @@
-DB_NAME: dbname
-DB_USER: myuser
-DB_PASSWORD: password
+DB_HOST= localhost
+DB_PORT= 5432
+DB_NAME= TailorShop
+DB_USERNAME= myuser
+DB_PASSWORD= mypasswo
